--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,13 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    FOS\ElasticaBundle\Finder\FinderInterface:
+        alias: fos_elastica.finder.domains
+
+    App\Service\DomainSearchService:
+        arguments:
+            $domainFinder: '@fos_elastica.finder.domains'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
