--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,11 +5,19 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     uploads_path: '/uploads/attachments'
+
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+    FOS\ElasticaBundle\Finder\FinderInterface:
+        alias: fos_elastica.finder.domains
+
+    App\Service\DomainSearchService:
+        arguments:
+            $domainFinder: '@fos_elastica.finder.domains'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
