Добавлены изменения для MeiliSearch: команды, сервисы и шаблоны

--- a/.env
+++ b/.env
@@ -48,3 +48,7 @@ ELASTICEMAIL_API_KEY=1231B2BCB2F9F813F40E568AF4D910CB99A1ABC5B47E5CBFDD51838C491
 
 ELASTICSEARCH_HOST=test.wip
 ELASTICSEARCH_PORT=9200
+
+MEILISEARCH_HOST=http://test.wip/meilisearch
+MEILISEARCH_API_KEY=mySecretMasterKey
+
