--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=true
 #APP_DEBUG=1
 APP_SECRET=f93c836c2e01d4bbbf7190c4e16aee2a
 ###< symfony/framework-bundle ###
